# PynkTromboneGym

./: README.md  generate_1sec_sound.py  pyproject.toml  sample.py
data/test_results/: .gitignore
pynktrombonegym/: env.py  environment.py  renderer.py  spaces.py  spectrogram.py
pynktrombonegym/wrappers/: __init__.py  action_by_acceleration.py  log1p_mel_spectrogram.py
tests/: test_env.py  test_generation.py  test_pynktrombonegym.py  test_renderer.py  test_spaces.py  test_spectrogram.py  test_wrappers.py
tests/wrappers/: test_action_by_acceleration.py  test_log1p_mel_spectrogram.py
