[tool.poetry]
name = "PynkTromboneGym"
version = "0.1.0"
description = ""
authors = ["Geson-anko <59220704+Geson-anko@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
gym = "^0.25.2"
pynktrombone = {git = "https://github.com/Geson-anko/pynktrombone.git", rev = "master"}
matplotlib = "^3.5.3"
pydub = "^0.25.1"
scipy = "^1.9.1"
librosa = "^0.9.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pyproject-flake8 = "^0.0.1-alpha.5"
black = "^22.6.0"
isort = "^5.10.1"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py39']
line-length = 120

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
known_local_folder=['config',]
skip = [".gitignore", ".dockerignore"]
extend_skip = [".md",".json",".json5",".lock"]



[tool.flake8]
max-line-length = 120
max-complexity = 18
ignore = "E203,E266,E501,E704,E731,F401,F403,F405,W503,"

[tool.mypy]
python_version = "3.9"
no_strict_optional = true
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests",]
filterwarnings = ["ignore::DeprecationWarning",]